--- a/Selenium.Com.OrangeCRM/test-output/emailable-report.html
+++ b/Selenium.Com.OrangeCRM/test-output/emailable-report.html
@@ -8,16 +8,18 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">N11 Test Suite</th></tr>
-<tr><td><a href="#t0">LoginTest</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">122,437</td><td></td><td></td></tr>
+<tr><th colspan="8">Suite</th></tr>
+<tr><td><a href="#t0">LoginTest</a></td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num attn">2</td><td class="num">13,915</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">N11 Test Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">LoginTest &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.test.OrangeCRM.LoginTest</td><td><a href="#m0">TEST1</a></td><td rowspan="1">1610007082320</td><td rowspan="1">3435</td></tr><tr class="passedeven"><td><a href="#m1">TEST2</a></td><td rowspan="1">1610007103767</td><td rowspan="1">2806</td></tr><tr class="passedodd"><td rowspan="2">com.test.OrangeCRM.LoginTest1</td><td><a href="#m2">TEST3</a></td><td rowspan="1">1610007123339</td><td rowspan="1">3108</td></tr><tr class="passedodd"><td><a href="#m3">TEST4</a></td><td rowspan="1">1610007142651</td><td rowspan="1">3539</td></tr><tr class="passedeven"><td rowspan="2">com.test.OrangeCRM.LoginTest3</td><td><a href="#m4">TEST5</a></td><td rowspan="1">1610007162519</td><td rowspan="1">3155</td></tr><tr class="passedeven"><td><a href="#m5">TEST6</a></td><td rowspan="1">1610007183837</td><td rowspan="1">2918</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">LoginTest &#8212; failed</th></tr><tr class="failedeven"><td rowspan="2">com.test.OrangeCRM.LoginTest</td><td><a href="#m0">TEST1</a></td><td rowspan="1">1704828553431</td><td rowspan="1">1511</td></tr><tr class="failedeven"><td><a href="#m1">TEST2</a></td><td rowspan="1">1704828559890</td><td rowspan="1">1364</td></tr></tbody>
 </table>
-<h2>LoginTest</h2><h3 id="m0">com.test.OrangeCRM.LoginTest#TEST1</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{password=admin123, username=Admin}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.test.OrangeCRM.LoginTest#TEST2</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{password=admin123, username=Admin}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">com.test.OrangeCRM.LoginTest1#TEST3</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{password=admin123, username=Admin}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m3">com.test.OrangeCRM.LoginTest1#TEST4</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{password=admin123, username=Admin}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m4">com.test.OrangeCRM.LoginTest3#TEST5</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{password=admin123, username=Admin}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m5">com.test.OrangeCRM.LoginTest3#TEST6</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{password=admin123, username=Admin}</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>LoginTest</h2><h3 id="m0">com.test.OrangeCRM.LoginTest#TEST1</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{password=admin123, username=Admin}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Tableau de bord] but found [Dashboard]
+	at com.test.OrangeCRM.LoginTest.TEST1(LoginTest.java:66)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.test.OrangeCRM.LoginTest#TEST2</h3><table class="result"><tr class="param"><th>Parameter #1</th></tr><tr class="param stripe"><td>{password=admin123, username=Admin}</td></tr><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: expected [Tableau de bord] but found [Dashboard]
+	at com.test.OrangeCRM.LoginTest.TEST2(LoginTest.java:90)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1511)
+... Removed 30 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
