--- a/Selenium.Com.OrangeCRM/test-output/old/Default suite/classes.html
+++ b/Selenium.Com.OrangeCRM/test-output/old/Default suite/classes.html
@@ -11,11 +11,11 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>HLogin1</td>
+<td>TEST1</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>HLogin</td>
+<td>TEST2</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
