--- a/Selenium.Com.OrangeCRM/test-output/old/Default suite/methods-alphabetical.html
+++ b/Selenium.Com.OrangeCRM/test-output/old/Default suite/methods-alphabetical.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f7ca97">  <td>20/10/28 18:45:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.HLogin(java.lang.String, java.lang.String)[pri:0, instance:com.test.OrangeCRM.LoginTest@2892dae4]">HLogin</td> 
-  <td>main@1813187653</td>   <td></td> </tr>
-<tr bgcolor="f7ca97">  <td>20/10/28 18:45:15</td>   <td>13318</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.HLogin1(java.lang.String, java.lang.String)[pri:0, instance:com.test.OrangeCRM.LoginTest@2892dae4]">HLogin1</td> 
-  <td>main@1813187653</td>   <td></td> </tr>
-<tr bgcolor="869769">  <td>20/10/28 18:45:16</td>   <td>14527</td> <td title="&lt;&lt;TestBase.closedriver()[pri:0, instance:com.test.OrangeCRM.LoginTest@2892dae4]">&lt;&lt;closedriver</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1813187653</td>   <td></td> </tr>
-<tr bgcolor="869769">  <td>20/10/28 18:45:06</td>   <td>3727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.getResult(org.testng.ITestResult)[pri:0, instance:com.test.OrangeCRM.LoginTest@2892dae4]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1813187653</td>   <td></td> </tr>
-<tr bgcolor="869769">  <td>20/10/28 18:45:15</td>   <td>13324</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TestBase.getResult(org.testng.ITestResult)[pri:0, instance:com.test.OrangeCRM.LoginTest@2892dae4]">&lt;&lt;getResult</td> 
-<td>&nbsp;</td>  <td>main@1813187653</td>   <td></td> </tr>
-<tr bgcolor="f7ca97">  <td>20/10/28 18:44:52</td>   <td>-9622</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.test.OrangeCRM.LoginTest@2892dae4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1813187653</td>   <td></td> </tr>
-<tr bgcolor="f7ca97">  <td>20/10/28 18:45:06</td>   <td>4394</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.test.OrangeCRM.LoginTest@2892dae4]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1813187653</td>   <td></td> </tr>
-<tr bgcolor="869769">  <td>20/10/28 18:44:52</td>   <td>-10298</td> <td title="&gt;&gt;TestBase.starttest()[pri:0, instance:com.test.OrangeCRM.LoginTest@2892dae4]">&gt;&gt;starttest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1813187653</td>   <td></td> </tr>
+<tr bgcolor="8e97bc">  <td>24/01/09 19:19:10</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TEST1(java.util.Map)[pri:0, instance:com.test.OrangeCRM.LoginTest@4f209819]">TEST1</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8e97bc">  <td>24/01/09 19:19:15</td>   <td>5601</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTest.TEST2(java.util.Map)[pri:0, instance:com.test.OrangeCRM.LoginTest@4f209819]">TEST2</td> 
+  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="b19b79">  <td>24/01/09 19:19:16</td>   <td>5642</td> <td title="&lt;&lt;TestBase.closedriver()[pri:0, instance:com.test.OrangeCRM.LoginTest@4f209819]">&lt;&lt;closedriver</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="8e97bc">  <td>24/01/09 19:19:15</td>   <td>5553</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.getResult(org.testng.ITestResult)[pri:0, instance:com.test.OrangeCRM.LoginTest@4f209819]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8e97bc">  <td>24/01/09 19:19:15</td>   <td>5604</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTest.getResult(org.testng.ITestResult)[pri:0, instance:com.test.OrangeCRM.LoginTest@4f209819]">&lt;&lt;getResult</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8e97bc">  <td>24/01/09 19:19:04</td>   <td>-5406</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.test.OrangeCRM.LoginTest@4f209819]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="8e97bc">  <td>24/01/09 19:19:15</td>   <td>5600</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTest.setUp()[pri:0, instance:com.test.OrangeCRM.LoginTest@4f209819]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
+<tr bgcolor="b19b79">  <td>24/01/09 19:19:04</td>   <td>-5918</td> <td title="&gt;&gt;TestBase.starttest()[pri:0, instance:com.test.OrangeCRM.LoginTest@4f209819]">&gt;&gt;starttest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1159190947</td>   <td></td> </tr>
 </table>
